--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation "com.leinardi.android:speed-dial:3.1.1"
+    implementation "org.apache.commons:commons-math3:3.6.1"
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
